# senseimatic

./: .gitignore  .gitmodules  Makefile-librfn.am  Makefile.am  README.md  configure.ac
src/: bmp180.c  bmp180.h  i2c_ctx.c  i2c_ctx.h  main.c  si7021.c  si7021.h
